<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profilepage">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="136dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/main_page_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="299dp"
        android:layout_height="208dp"
        android:background="@drawable/broder_everything"
        android:gravity="center|start"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/getUsername"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username2" />

            <EditText
                android:id="@+id/displayUsername"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/getEmail"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email2" />

            <EditText
                android:id="@+id/displayEmail"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/getPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password2" />

            <EditText
                android:id="@+id/displayPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/resetMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resetpassword2"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <Button
        android:id="@+id/resetBtn"
        android:layout_width="94dp"
        android:layout_height="39dp"
        android:background="@drawable/broder_everything"
        android:text="@string/reset"
        android:textColor="@color/black"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <!--<Button
        android:id="@+id/logOutbtn"
        android:layout_width="94dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:text="@string/log_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetBtn" />-->

    <TextView
        android:id="@+id/messageForUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thankyou"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.6" />
</androidx.constraintlayout.widget.ConstraintLayout>