<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseBusStand">

    <ListView
        android:id="@+id/listViewoptionForBusStand"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_margin="5dp"
        android:gravity="center|right"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageforuser1"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/destination1"
                app:srcCompat="@drawable/ic__destination_pin" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="351dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destinationtxt"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/destination2"
                app:srcCompat="@drawable/ic_bus_icon_for_map" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destinationtxt2"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonToGoMap"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/broder_everything"
            android:text="@string/openmap"
            android:textColor="@color/black"
            app:backgroundTint="#FFFFFF" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>