<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002">

        <ImageView
            android:id="@+id/busImage"
            android:layout_width="67dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/logo_route"
            app:srcCompat="@drawable/logo" />

        <LinearLayout
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/busName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:text="@string/busname"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@drawable/broder_everything" />

            <TextView
                android:id="@+id/busDescription"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:gravity="center|start"
                android:text="@string/des"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/busNumber"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bha" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>